changed reading of file