@@ -7,7 +7,7 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class Main {
     public static void main(String[] args) {
@@ -53,7 +53,7 @@ public class Main {
 
         if (thereIsInPath && !thereIsData) {
             try {
-                data = new String(Files.readAllBytes(Paths.get(inPath)));
+                data = Files.readString(Path.of(inPath));
             } catch (IOException e) {
                 System.out.println("Error: can't read file");
                 System.exit(0);
